tooling/nargo_cli/tests/snapshots/execution_success/merkle_insert/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "old_root",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "old_leaf",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "old_hash_path",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "new_root",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "leaf",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "index",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "14486391642420115797": {
        "error_kind": "string",
        "string": "Field failed to decompose into specified 3 limbs"
      },
      "15764276373176857197": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _71",
    "private parameters indices : [_0, _1, _2, _3, _4, _6, _7]",
    "public parameters indices : [_5]",
    "return value indices : []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _7) 0 ], EXPR [ 3 ], EXPR [ 2 ]], outputs: [[_8, _9, _10]]",
    "BLACKBOX::RANGE [_8]:1 bits []",
    "BLACKBOX::RANGE [_9]:1 bits []",
    "BLACKBOX::RANGE [_10]:1 bits []",
    "EXPR [ (1, _7) (-1, _8) (-2, _9) (-4, _10) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _8, _1) (1, _8, _2) (1, _1) 0 ]], outputs: [_11, _12]",
    "EXPR [ (-1, _1, _8) (-1, _53) 0 ]",
    "EXPR [ (1, _2, _8) (-1, _54) 0 ]",
    "EXPR [ (1, _1) (-1, _11) (-340282366920938463463374607431768211456, _12) (1, _53) (1, _54) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _8, _1) (-1, _8, _2) (1, _2) 0 ]], outputs: [_13, _14]",
    "EXPR [ (1, _2) (-1, _13) (-340282366920938463463374607431768211456, _14) (-1, _53) (-1, _54) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _11, _12, _13, _14, 2, 0, 1] [_15, _16, _17]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _9, _3) (-1, _9, _15) (1, _15) 0 ]], outputs: [_18, _19]",
    "EXPR [ (1, _3, _9) (-1, _57) 0 ]",
    "EXPR [ (-1, _9, _15) (-1, _58) 0 ]",
    "EXPR [ (1, _15) (-1, _18) (-340282366920938463463374607431768211456, _19) (1, _57) (1, _58) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _9, _3) (1, _9, _15) (1, _3) 0 ]], outputs: [_20, _21]",
    "EXPR [ (1, _3) (-1, _20) (-340282366920938463463374607431768211456, _21) (-1, _57) (-1, _58) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _18, _19, _20, _21, 2, 0, 1] [_22, _23, _24]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _10, _4) (-1, _10, _22) (1, _22) 0 ]], outputs: [_25, _26]",
    "EXPR [ (1, _4, _10) (-1, _61) 0 ]",
    "EXPR [ (-1, _10, _22) (-1, _62) 0 ]",
    "EXPR [ (1, _22) (-1, _25) (-340282366920938463463374607431768211456, _26) (1, _61) (1, _62) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _10, _4) (1, _10, _22) (1, _4) 0 ]], outputs: [_27, _28]",
    "EXPR [ (1, _4) (-1, _27) (-340282366920938463463374607431768211456, _28) (-1, _61) (-1, _62) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _25, _26, _27, _28, 2, 0, 1] [_29, _30, _31]",
    "EXPR [ (1, _0) (-1, _29) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _8, _2) (-1, _8, _6) (1, _6) 0 ]], outputs: [_32, _33]",
    "EXPR [ (-1, _6, _8) (-1, _65) 0 ]",
    "EXPR [ (1, _6) (-1, _32) (-340282366920938463463374607431768211456, _33) (1, _54) (1, _65) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _8, _2) (1, _8, _6) (1, _2) 0 ]], outputs: [_34, _35]",
    "EXPR [ (1, _2) (-1, _34) (-340282366920938463463374607431768211456, _35) (-1, _54) (-1, _65) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _32, _33, _34, _35, 2, 0, 1] [_36, _37, _38]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _9, _3) (-1, _9, _36) (1, _36) 0 ]], outputs: [_39, _40]",
    "EXPR [ (-1, _9, _36) (-1, _68) 0 ]",
    "EXPR [ (1, _36) (-1, _39) (-340282366920938463463374607431768211456, _40) (1, _57) (1, _68) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _9, _3) (1, _9, _36) (1, _3) 0 ]], outputs: [_41, _42]",
    "EXPR [ (1, _3) (-1, _41) (-340282366920938463463374607431768211456, _42) (-1, _57) (-1, _68) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _39, _40, _41, _42, 2, 0, 1] [_43, _44, _45]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _10, _4) (-1, _10, _43) (1, _43) 0 ]], outputs: [_46, _47]",
    "EXPR [ (-1, _10, _43) (-1, _71) 0 ]",
    "EXPR [ (1, _43) (-1, _46) (-340282366920938463463374607431768211456, _47) (1, _61) (1, _71) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _10, _4) (1, _10, _43) (1, _4) 0 ]], outputs: [_48, _49]",
    "EXPR [ (1, _4) (-1, _48) (-340282366920938463463374607431768211456, _49) (-1, _61) (-1, _71) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [3728882899078719075161482178784387565366481897740339799480980287259621149274, -9903063709032878667290627648209915537972247634463802596148419711785767431332, 0, 2393473289045184898987089634332637236754766663897650125720167164137088869378, -7135402912423807765050323395026152633898511180575289670895350565966806597339, 0, -1094708040843609169356775910874053498301840173462935739639689208799068762676, -718703907181967287621274717949248537252263842169639534402461291799004475262, 0, _46, _47, _48, _49, 2, 0, 1] [_50, _51, _52]",
    "EXPR [ (1, _5) (-1, _50) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 14 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Mov { destination: Direct(32838), source: Relative(2) }, Const { destination: Relative(3), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 2 }, Stop { return_data: HeapVector { pointer: Relative(3), size: Relative(4) } }, Return, Call { location: 24 }, Cast { destination: Relative(3), source: Relative(1), bit_size: Integer(U128) }, Cast { destination: Relative(2), source: Relative(3), bit_size: Field }, BinaryFieldOp { destination: Relative(3), op: Sub, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(1), bit_size: Field, value: 8680525429001239497728366687280168587232520577698044359798894838135247199343 }, BinaryFieldOp { destination: Relative(4), op: Mul, lhs: Relative(3), rhs: Relative(1) }, Mov { destination: Relative(1), source: Relative(2) }, Mov { destination: Relative(2), source: Relative(4) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 29 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 15764276373176857197 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]",
    "unconstrained func 1",
    "[Const { destination: Direct(5), bit_size: Integer(U32), value: 0 }, Const { destination: Direct(6), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(7), bit_size: Integer(U32), value: 3 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(7), offset_address: Direct(5) }, Cast { destination: Direct(1), source: Direct(1), bit_size: Integer(U32) }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, BinaryIntOp { destination: Direct(7), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(3), op: IntegerDiv, lhs: Direct(0), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Mul, lhs: Direct(3), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Sub, lhs: Direct(0), rhs: Direct(4) }, Store { destination_pointer: Direct(9), source: Direct(4) }, BinaryIntOp { destination: Direct(9), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(6) }, Mov { destination: Direct(0), source: Direct(3) }, BinaryIntOp { destination: Direct(8), op: LessThan, bit_size: U32, lhs: Direct(9), rhs: Direct(7) }, JumpIf { condition: Direct(8), location: 7 }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, Stop { return_data: HeapVector { pointer: Direct(9), size: Direct(1) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
